@@ -1,3 +1,11 @@
+2017-12-15  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* examples/site-lib/effects.fs: effects-cross-synthesis is
+	an alias for cross-synthesis from examp.fs.
+
+	* examples/site-lib/examp.fs: Fix expsrc, cross-synthesis,
+	voiced->unvoiced, pulse-voice.
+
 2017-12-07  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* examples/site-lib/popup.fs: Remove some bugs in edhist.
